--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,20 +1,33 @@
 name: projecttest
 description: A new Flutter project.
-publish_to: 'none'
-version: 0.1.0
+
+publish_to: "none"
+
+version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.3 <3.0.0'
+  sdk: ">=3.1.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.13.6
+
+  cupertino_icons: ^1.0.2
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  build_runner: ^2.0.0
+
   flutter_lints: ^2.0.0
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/
+    - assets/img/background.png
+    - assets/img/profile.png
+    - assets/img/arrow.png
